manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
spec:
  selector:
    app: pi-hole
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: udp-53
    protocol: UDP
    port: 53
    targetPort: tcp-53
    nodePort: 31101
  - name: tcp-53
    protocol: TCP
    port: 53
    targetPort: tcp-53
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: https
    protocol: TCP
    port: 443
    targetPort: https
